@startuml

title __IMPL's Class Diagram__\n

  package  {
    package money {
      package money.impl {
        class Bill {
            - billName : String
            - billValue : int
            - pennyValue : int
            + Bill()
            + getBillValue()
            + currencyName()
            + pennyValue()
        }
      }
    }
  }
  

  package  {
    package money {
      package money.impl {
        class Coin {
            - coinName : String
            - pennyValue : int
            + Coin()
            + currencyName()
            + pennyValue()
        }
      }
    }
  }
  

  package  {
    package money {
      package money.impl {
        class Money {
            {static} + PENNY : Coin
            {static} + NICKEL : Coin
            {static} + DIME : Coin
            {static} + QUARTER : Coin
            {static} + DOLLAR : Bill
            {static} + TWO_DOLLAR : Bill
            {static} + FIVE_DOLLAR : Bill
            {static} + TEN_DOLLAR : Bill
            {static} + TWENTY_DOLLAR : Bill
            {static} + FIFTY_DOLLAR : Bill
            {static} + HUNDRED_DOLLAR : Bill
            {static} ~ moneyInDescOrder : List<USCurrency>
            {static} ~ acceptableCurrencyNames : Set<String>
            {static} + isValidCurrency()
        }
      }
    }
  }
  

  package  {
    package money {
      package money.impl {
        class MoneyManagerImpl {
            {static} ~ LOG : Logger
            - moneyWallet : Map<USCurrency, Integer>
            + MoneyManagerImpl()
            - initialize()
            + addToWallet()
            + addToWallet()
            + withdrawFromWallet()
            + getChangeDenominations()
            - persistTransactionRef()
            - logTransactionFailed()
            - checkCashExists()
        }
      }
    }
  }
  

  Bill -up-|> USCurrency
  Coin -up-|> USCurrency
  MoneyManagerImpl -up-|> MoneyManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
